--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             </svg>
         </div>
         <div class="search">
-            <input type="text" id="search" name="search" class="search_input" placeholder="Rechercher un ingrédient, appareil, ustensiles ou une recette"/>
+            <label for="search_input"></label>
+            <input type="text" name="search_input" class="search_input" placeholder="Rechercher un ingrédient, appareil, ustensiles ou une recette" id="search-q"
+            autocomplete="off"/>
             <span class="search_icon"><i class="fas fa-search"></i></span>
         </div>
         <div class="selection_filtre" id="selection_filtre">
